--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "firebase": "^10.14.0",
+    "lucide-react": "^0.452.0",
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "prisma": "^5.20.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "shadcn": "^2.1.0",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,6 +32,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
+    "mini-css-extract-plugin": "^2.9.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
