--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-icons": "^1.3.0",
