--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "lucide-react": "^0.452.0",
     "nanoid": "^5.0.7",
     "next": "14.2.15",
