--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-separator": "^1.1.1",
@@ -27,7 +28,9 @@
     "next": "14.2.15",
     "next-auth": "^4.24.8",
     "prisma": "^5.20.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "shadcn": "^2.1.0",
     "tailwind-merge": "^2.5.3",
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.16.11",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.1",
