--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^4.24.8",
     "prisma": "^5.20.0",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
